--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.co" type="image/x-icon">
         
         <!--=============== REMIX ICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                         <a href="https://www.twitter.com/SiwaneXYZ" target="_blank" class="profile__social-link">
                             <i class="ri-twitter-line"></i>
                         </a>
-                        <a href="https://github.com/SiwaneXYZ" target="_blank" class="profile__social-link">
+                        <a href="https://github.com/elhizazi1" target="_blank" class="profile__social-link">
                             <i class="ri-github-line"></i>
                         </a>
                     </ul>
