--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@
 <meta content='/main/ms-icon-144x144.png' name='msapplication-TileImage'/>
 <meta content='#299e94' name='theme-color'/>
 <link href='/manifest.json' rel='manifest'/>
+<!-- Meta Owner -->
+  <meta content='Pro Templates' name='Author'/>
+  <link href='جمال الحزازي' rel='me'/>
+  <link href='الحزازي' rel='author'/>
+  <link href='https://www.siwane.xyz/' rel='publisher'/>
+  <meta content='100080130633461' property='fb:pages'/>
+  <meta content='https://www.facebook.com/elhizazi2' property='article:author'/>
+  <meta content='https://www.facebook.com/SiwaneXYZ' property='article:publisher'/>
+  <meta content='1200785239829864448' name='twitter:site'/>
+  <meta content='1373325277' name='twitter:creator'/>
+<!-- Required -->
 
+    <meta content='647698912556140' property='fb:app_id'/>
+
+    <meta content='100007816237839' property='fb:admins'/>
+
+    <b:if cond='data:view.isSingleItem'>
+
+      <meta content='110446557040999' property='article:publisher'/> 
+
+      <meta content='100007816237839' property='article:author'/>
         
         <!--=============== REMIX ICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
