--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <meta content='ms-icon-144x144.png' name='msapplication-TileImage'/>
 <meta content='#299e94' name='theme-color'/>
 <!-- Meta Owner -->
-  <meta content='Pro Templates' name='Author'/>
+  <meta content='SiwaneXYZ' name='Author'/>
   <link href='جمال الحزازي' rel='me'/>
   <link href='الحزازي' rel='author'/>
   <link href='https://www.siwane.xyz/' rel='publisher'/>
@@ -50,8 +50,6 @@
     <meta content='647698912556140' property='fb:app_id'/>
 
     <meta content='100007816237839' property='fb:admins'/>
-
-    <b:if cond='data:view.isSingleItem'>
 
       <meta content='110446557040999' property='article:publisher'/> 
 
