--- a/Tst.html
+++ b/Tst.html
@@ -89,6 +89,9 @@
                 <center>
                   <div onclick="copyToClipboard()"><a class="button">انقر لنسخ</a></div>
                   <div><a id="downloadButton" class="button">تحميل</a></div>
+<button onclick="document.querySelector('textarea').value = ''">تنظيف</button>
+<button onclick="window.open('https://repo.siwane.xyz/')">معاينة</button>
+
                 </center>
             </div>
         </div>
