--- a/index.html
+++ b/index.html
@@ -363,5 +363,13 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+   <audio id="my-audio" src="my-song.mp3" autoplay loop hidden></audio>
+  <script>
+    // Get the audio element
+    const audio = document.getElementById("my-audio");
+
+    // Play the audio
+    audio.play();
+  </script>
     </body>
 </html>
