--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
-   <audio id="my-audio" src="my-song.mp3" autoplay loop hidden></audio>
+   <audio id="my-audio" src="https://github.com/XyzSiwane/SiwaneXYZ.github.io/raw/main/Music/_System_%20-%20from%20Carbon%20Based%20Lifeforms%20by%20Twentythree.mp3" autoplay loop hidden></audio>
   <script>
     // Get the audio element
     const audio = document.getElementById("my-audio");
