--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <title>صِوانˣʸᶻ</title> 
     </head>
     <body>
+        <audio id="my-audio" autoplay loop hidden>
+  <source src="https://github.com/XyzSiwane/SiwaneXYZ.github.io/raw/main/Music/_System_%20-%20from%20Carbon%20Based%20Lifeforms%20by%20Twentythree.mp3" type="audio/mpeg">
+        </audio>
         <!--=============== HEADER ===============-->
         <header class="profile container">
             <!-- Botón para cambiar el tema -->
@@ -363,7 +366,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
-   <audio id="my-audio" src="https://github.com/XyzSiwane/SiwaneXYZ.github.io/raw/main/Music/_System_%20-%20from%20Carbon%20Based%20Lifeforms%20by%20Twentythree.mp3" autoplay loop hidden></audio>
   <script>
     // Get the audio element
     const audio = document.getElementById("my-audio");
