--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <link href='https://www.siwane.xyz/' rel='publisher'/>
   <meta content='100080130633461' property='fb:pages'/>
   <meta content='https://www.facebook.com/elhizazi2' property='article:author'/>
-  <meta content='https://www.facebook.com/SiwaneXYZ' property='article:publisher'/>
+  <meta content='https://www.facebook.com/Si1xyz' property='article:publisher'/>
   <meta content='1200785239829864448' name='twitter:site'/>
   <meta content='1373325277' name='twitter:creator'/>
 <!-- Required -->
@@ -84,10 +84,10 @@
                     <h2 class="profile__name">صِوان ˣʸᶻ</h2>
                     <h3 class="profile__profession"> صفحة الانطلاق</h3>                                        
                     <ul class="profile__social">
-                        <a href="https://www.instagram.com/SiwaneXYZ" target="_blank" class="profile__social-link">
+                        <a href="https://www.instagram.com/Si1xyz" target="_blank" class="profile__social-link">
                             <i class="ri-instagram-line"></i>
                         </a>
-                        <a href="https://www.twitter.com/SiwaneXYZ" target="_blank" class="profile__social-link">
+                        <a href="https://www.twitter.com/Si1xyz" target="_blank" class="profile__social-link">
                             <i class="ri-twitter-line"></i>
                         </a>
                         <a href="https://github.com/elhizazi1" target="_blank" class="profile__social-link">
@@ -130,10 +130,10 @@
                     </a> -->
 
                     <div class="profile__buttons-small">
-                        <a href="https://api.whatsapp.com/send?phone=212698915304&text=Hola, más información!" target="_blank" class="button button__small button__gray">
+                        <a href="https://api.whatsapp.com/send?phone=212722464243&text=مرحبا، مزيد من المعلومات!" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-line"></i>
                         </a>
-                        <a href="https://m.me/SiwaneXYZ" target="_blank" class="button button__small button__gray">
+                        <a href="https://m.me/Si1xyz" target="_blank" class="button button__small button__gray">
                             <i class="ri-messenger-line"></i>
                         </a>
                         <a href="https://paypal.me/ElHizazi" target="_blank" class="button button__small button__gray">
