--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </a> -->
 
                     <div class="profile__buttons-small">
-                        <a href="https://api.whatsapp.com/send?phone=212722464243&text=مرحبا، مزيد من المعلومات!" target="_blank" class="button button__small button__gray">
+                        <a href="https://api.whatsapp.com/send?phone=212722464243&text=مرحبا، هل يمكن الحصول على المزيد من المعلومات!" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-line"></i>
                         </a>
                         <a href="https://m.me/Si1xyz" target="_blank" class="button button__small button__gray">
